syntax = "proto3";
package agent;

option go_package = "github.com/erayarslan/multiverse/agent";

import "common/common.proto";

service Rpc {
  rpc instances (GetInstancesRequest) returns (GetInstancesReply) {};
  rpc info (GetInfoRequest) returns (GetInfoReply) {};
  rpc shell (stream common.ShellRequest) returns (stream common.ShellReply) {};
}

message CPU {
  int32 total = 1;
  int32 available = 2;
}

message Memory {
  uint64 total = 1;
  uint64 available = 2;
}

message Resource {
  CPU cpu = 1;
  Memory memory = 2;
}

message GetInfoRequest {
}

message GetInfoReply {
  Resource resource = 1;
}

message Instance {
  string name = 1;
  string state = 2;
  repeated string ipv4 = 3;
  string image = 4;
}

message GetInstancesRequest {
}

message GetInstancesReply {
  repeated Instance instances = 1;
}